--- a/code/train_dpo/requirements.txt
+++ b/code/train_dpo/requirements.txt
@@ -1,67 +1,67 @@
-absl-py==2.3.0
 accelerate==1.7.0
-aenum==3.1.15
 aiohappyeyeballs==2.6.1
-aiohttp==3.12.11
+aiohttp==3.12.9
 aiosignal==1.3.2
-annotated-types==0.7.0
-antlr4-python3-runtime==4.13.2
+anaconda-anon-usage==0.7.0
+annotated-types==0.6.0
 anyio==4.9.0
+archspec==0.2.3
 attrs==25.3.0
-autoawq==0.2.9
 bitsandbytes==0.46.0
+black==25.1.0
+boltons==24.1.0
+Brotli==1.0.9
 certifi==2025.4.26
-chardet==5.2.0
-charset-normalizer==3.4.2
+cffi==1.17.1
+charset-normalizer==3.3.2
 click==8.2.1
-colorama==0.4.6
-colorlog==6.9.0
-compressed-tensors==0.10.1
-dataclasses-json==0.6.7
-DataProperty==1.1.0
+conda==25.3.1
+conda-anaconda-telemetry==0.1.2
+conda-anaconda-tos==0.1.3
+conda-content-trust==0.2.0
+conda-libmamba-solver==25.4.0
+conda-package-handling==2.4.0
+conda_package_streaming==0.11.0
+cryptography==44.0.1
 datasets==3.6.0
 dill==0.3.8
-faiss-gpu-cu12==1.10.0
+distro==1.9.0
+fastapi==0.115.12
 filelock==3.18.0
+flake8==7.2.0
+frozendict==2.4.2
 frozenlist==1.6.2
+fschat==0.2.36
 fsspec==2025.3.0
 gitdb==4.0.12
 GitPython==3.1.44
-greenlet==3.2.3
 h11==0.16.0
+hf_transfer==0.1.9
 hf-xet==1.1.3
 httpcore==1.0.9
-httpx==0.27.2
-httpx-sse==0.4.0
+httpx==0.28.1
 huggingface-hub==0.32.4
-idna==3.10
-inquirerpy==0.3.4
+idna==3.7
+iniconfig==2.1.0
+isort==6.0.1
 Jinja2==3.1.6
-joblib==1.5.1
 jsonpatch==1.33
-jsonpointer==3.0.0
-langchain==0.3.25
-langchain-community==0.3.24
-langchain-core==0.3.64
-langchain-huggingface==0.2.0
-langchain-text-splitters==0.3.8
-langsmith==0.3.45
-latex2sympy2_extended==1.10.1
-lighteval==0.8.1.dev0
-lxml==5.4.0
-markdown-it-py==3.0.0
+jsonpointer==2.1
+latex2mathml==3.78.0
+libmambapy==2.0.5
+markdown-it-py==2.2.0
+markdown2==2.5.3
 MarkupSafe==3.0.2
-marshmallow==3.26.1
-mbstrdecoder==1.1.4
-mdurl==0.1.2
+mccabe==0.7.0
+mdurl==0.1.0
+menuinst==2.2.0
 mpmath==1.3.0
 multidict==6.4.4
 multiprocess==0.70.16
 mypy_extensions==1.1.0
 networkx==3.5
-ninja==1.11.1.4
-nltk==3.9.1
-numpy==1.26.4
+nh3==0.2.21
+numpy==2.2.6
 nvidia-cublas-cu12==12.6.4.1
 nvidia-cuda-cupti-cu12==12.6.80
 nvidia-cuda-nvrtc-cu12==12.6.77
@@ -76,67 +76,64 @@ nvidia-cusparselt-cu12==0.6.3
 nvidia-nccl-cu12==2.26.2
 nvidia-nvjitlink-cu12==12.6.85
 nvidia-nvtx-cu12==12.6.77
-optimum-quanto==0.2.7
-orjson==3.10.18
 packaging==24.2
 pandas==2.3.0
-pathvalidate==3.2.3
-pfzy==0.3.4
-pillow==11.2.1
-pip==25.1.1
-portalocker==3.1.1
+pathspec==0.12.1
+pip==25.0
+platformdirs==4.3.7
+pluggy==1.5.0
 prompt_toolkit==3.0.51
 propcache==0.3.1
-protobuf==3.20.3
+protobuf==6.31.1
 psutil==7.0.0
 pyarrow==20.0.0
-pycountry==24.6.1
-pydantic==2.11.5
-pydantic_core==2.33.2
-pydantic-settings==2.9.1
+pycodestyle==2.13.0
+pycosat==0.6.6
+pycparser==2.21
+pydantic==2.10.3
+pydantic_core==2.27.1
+pyflakes==3.3.2
 Pygments==2.19.1
-pytablewriter==1.2.1
+PySocks==1.7.1
+pytest==8.4.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
-requests-toolbelt==1.0.0
-rich==14.0.0
-rouge_score==0.1.2
-sacrebleu==2.5.1
+rewardbench==0.1.4
+rich==13.9.4
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
 safetensors==0.5.3
-scikit-learn==1.7.0
-scipy==1.15.3
-sentence-transformers==4.1.0
 sentencepiece==0.2.0
-setuptools==80.9.0
-shellingham==1.5.4
+sentry-sdk==2.29.1
+setproctitle==1.3.6
+setuptools==78.1.1
+shortuuid==1.0.13
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
-SQLAlchemy==2.0.41
+starlette==0.46.2
+svgwrite==1.4.3
 sympy==1.14.0
-tabledata==1.3.4
 tabulate==0.9.0
-tcolorpy==0.1.7
-tenacity==9.1.2
-termcolor==2.3.0
-threadpoolctl==3.6.0
+tiktoken==0.9.0
 tokenizers==0.21.1
 torch==2.7.1
 tqdm==4.67.1
-transformers==4.52.4
+transformers==4.51.3
 triton==3.3.1
-typepy==1.3.4
-typer==0.16.0
-typing_extensions==4.14.0
-typing-inspect==0.9.0
-typing-inspection==0.4.1
+trl==0.18.1
+truststore==0.10.0
+typing_extensions==4.12.2
 tzdata==2025.2
-urllib3==2.4.0
+urllib3==2.3.0
+uvicorn==0.34.3
+wandb==0.20.1
+wavedrom==2.0.3.post3
 wcwidth==0.2.13
+wheel==0.45.1
 xxhash==3.5.0
 yarl==1.20.0
 zstandard==0.23.0
